[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/spritetext.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/debug/speed_display.gd" type="Script" id=2]
[ext_resource path="res://src/debug/input_display.gd" type="Script" id=3]
[ext_resource path="res://src/debug/pause_display.gd" type="Script" id=4]
[ext_resource path="res://src/debug/debug_hud.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Theme" id=3]

[node name="debug" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="Coin1" type="ColorRect" parent="."]
visible = false
margin_left = 13.0
margin_top = 160.0
margin_right = 21.0
margin_bottom = 168.0
color = Color( 0.141176, 0.921569, 0.666667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Coin2" type="ColorRect" parent="."]
visible = false
margin_left = 23.0
margin_top = 160.0
margin_right = 31.0
margin_bottom = 168.0
color = Color( 0.854902, 0.439216, 0.913725, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Coin3" type="ColorRect" parent="."]
visible = false
margin_left = 33.0
margin_top = 160.0
margin_right = 41.0
margin_bottom = 168.0
color = Color( 0.890196, 0.878431, 0.172549, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="."]
visible = false
margin_left = 4.15908
margin_top = 5.42046
margin_right = 170.159
margin_bottom = 19.4205
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="controls" type="Label" parent="."]
visible = false
margin_left = 9.19875
margin_top = 181.809
margin_right = 175.199
margin_bottom = 246.809
text = "X: jump
square: attack
R1: dash
"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="version" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.0784314 )
material = SubResource( 1 )
position = Vector2( 1094, 671 )
text = "v0.4.0"

[node name="tick" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0.984314, 0, 0.501961 )
material = SubResource( 1 )
position = Vector2( 16, 624 )
text = "0"

[node name="replay_tick" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0.329412, 0, 0.501961 )
material = SubResource( 1 )
position = Vector2( 16, 576 )
text = "0"

[node name="fps" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 1, 0, 0.5 )
material = SubResource( 1 )
position = Vector2( 16, 672 )
text = "0 fps"

[node name="pingtext" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
position = Vector2( 40, 192 )

[node name="input_display" type="Node2D" parent="."]
position = Vector2( 60, 124 )
script = ExtResource( 3 )

[node name="stick" type="Node2D" parent="input_display"]
__meta__ = {
"_edit_lock_": true
}

[node name="dot" type="ColorRect" parent="input_display/stick"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 8.0
margin_bottom = 8.0
theme = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="input_display/stick"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 28.0
margin_bottom = 28.0
color = Color( 1, 1, 1, 0.0784314 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="jump" type="ColorRect" parent="input_display"]
margin_left = 36.0
margin_top = -4.0
margin_right = 68.0
margin_bottom = 28.0
color = Color( 0.905882, 0.905882, 0.905882, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="attack" type="ColorRect" parent="input_display"]
margin_left = 76.0
margin_top = -20.0
margin_right = 108.0
margin_bottom = 12.0
color = Color( 0.309804, 0.694118, 0.286275, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="dash" type="ColorRect" parent="input_display"]
margin_left = 76.0
margin_top = -44.0
margin_right = 108.0
margin_bottom = -28.0
color = Color( 0.701961, 0.388235, 0.917647, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="reset" type="ColorRect" parent="input_display"]
margin_left = 36.0
margin_top = -44.0
margin_right = 68.0
margin_bottom = -28.0
color = Color( 0.917647, 0.388235, 0.486275, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="speed_display" type="Node2D" parent="."]
position = Vector2( 40, 32 )
script = ExtResource( 2 )

[node name="spritetext" parent="speed_display" instance=ExtResource( 1 )]
modulate = Color( 0.776471, 0.564706, 0, 1 )
material = SubResource( 1 )
text = "1234"

[node name="pos_x" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.776471, 0.564706, 0, 1 )
material = SubResource( 1 )
position = Vector2( 40, 192 )
text = "0000"

[node name="pos_y" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.776471, 0.564706, 0, 1 )
material = SubResource( 1 )
position = Vector2( 160, 192 )
text = "0000"

[node name="vel_x" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.133333, 0.803922, 0.176471, 1 )
material = SubResource( 1 )
position = Vector2( 40, 232 )
text = "0000"

[node name="vel_y" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.133333, 0.803922, 0.176471, 1 )
material = SubResource( 1 )
position = Vector2( 160, 232 )
text = "0000"

[node name="pause_display" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="spritetext" parent="pause_display" instance=ExtResource( 1 )]
modulate = Color( 0.490196, 0.0784314, 0.317647, 1 )
material = SubResource( 1 )
position = Vector2( 528, 32 )
text = "*PAUSED*"
